Header: navigation menu added

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="header__top">
       <nav class="nav">
         <div class="nav__logo">
-          <h2>GoTrip</h2>
+          <a href="#">GoTrip</a>
         </div>
 
         <ul class="nav__list">
-          <li class="nav_li"><a href="">Home</a></li>
-          <li class="nav_li"><a href="">Services</a></li>
-          <li class="nav_li"><a href="">Pricing</a></li>
-          <li class="nav_li"><a href="">Contacts</a></li>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
 
         <ul class="nav__login">
-          <li class="nav_li"><a href="">Sign up</a></li>
-          <li class="nav_li"><a href="">Login</a></li>
+          <li><a href="#">Sign up</a></li>
+          <li class="btn"><a href="#">Login</a></li>
         </ul>
       </nav>
     </div>
